--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="DataBaseConnector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MenuDostawa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MenuGlowne.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DataBaseConnector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuDostawa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
